Lump: forms, models, first admin page

--- a/cabin/style/screen.styl
+++ b/cabin/style/screen.styl
@@ -112,7 +112,7 @@ body.splash
 
 // Show everyone while transitioning.
 body.splash-transition
-  header, .main
+  > header, .main
     display: block
 
 // XXX temporary animation
