--- a/cabin/templates/base-pjax.html
+++ b/cabin/templates/base-pjax.html
@@ -1,5 +1,5 @@
 <section class="content"
-  {%- if title %} data-title="{{ title }}"{% endif %}
-  {%- if page %} data-page="{{ page }}"{% endif %}>
+  {%- if page %} data-page="{{ page }}"{% endif %}
+  {%- if title %} data-title="{{ title }}"{% endif %}>
   {% block content %}{% endblock %}
 </section>
