--- a/cabin/templates/base-full.html
+++ b/cabin/templates/base-full.html
@@ -16,7 +16,7 @@
   <script src="/static/vendor/modernizr-latest.js"></script>
   {% block extra_head %}{% endblock %}
 </head>
-<body{% if splash %} class="splash"{% endif %}>
+<body class="{% if page %}page-{{ page }}{% endif %}{% if splash %} splash{% endif %}">
   <header>
     <h1>Cabin</h1>
     <h2>Crafting experiences for people &amp; projects we love.</h2>
@@ -39,10 +39,10 @@
     <a class="toggle"><span>+</span></a>
   </nav>
 
-  <div class="main">
+  <div class="main"><hr>
     <section class="content"
-      {%- if title %} data-title="{{ title }}"{% endif %}
-      {%- if page %} data-page="{{ page }}"{% endif %}>
+      {%- if page %} data-page="{{ page }}"{% endif %}
+      {%- if title %} data-title="{{ title }}"{% endif %}>
       {% block content %}{% endblock %}
     </section>
 
