--- a/cabin/style/screen.styl
+++ b/cabin/style/screen.styl
@@ -199,6 +199,7 @@ body.splash-transition
   nav_height = 40px
 
   nav
+    border-bottom: 1px solid cabin_grey_light
     display: table
     width: 100%
     height: nav_height
@@ -334,6 +335,15 @@ body.splash-transition
   .main
     padding: 0 30px
     padding-top: nav_height
+    > hr
+      background: cabin_grey_light
+      border: none
+      height: 1px
+      margin: 0
+  .content
+    padding: 0 30px
+
+  .main
     padding-bottom: footer_height
 
   .main > hr
