--- a/cabin/style/screen.styl
+++ b/cabin/style/screen.styl
@@ -78,6 +78,7 @@ body > header
 
 nav
   background: white
+  border-bottom: 1px solid cabin_grey_light
   fixed: top left
   right: 0
   user-select: none
@@ -105,23 +106,33 @@ html, body
   box-sizing: border-box
   min-height: 100%
   relative: top
-
-body.splash
-  // Avoid page-width jump.
+// Avoid page-width jump.
+body
   overflow-y: scroll
 
+body.splash
   > header
     display: block
-  nav
-    absolute: bottom 0
-    top: auto
   .main
+    absolute: bottom left; top: auto
+    height: 0
+    min-height: @height
+    padding-bottom: 0
+    width: 100%
+  nav
+    position: absolute
+  .content, footer
     display: none
 
 // Show everyone while transitioning.
 body.splash-transition
-  > header, .main
+  nav
+    position: absolute
+  .main
+    height: auto
+  > header, .content
     display: block
+
 
 // XXX temporary animation
 .loading nav .logo
@@ -189,7 +200,6 @@ body.splash-transition
   nav_height = 40px
 
   nav
-    border-bottom: 1px solid cabin_grey_light
     display: table
     width: 100%
     height: nav_height
@@ -216,6 +226,8 @@ body.splash-transition
     bottom: nav_height
   .main
     padding-top: nav_height
+  .content
+    padding: 0 20px
 
   footer
     display: none
@@ -320,17 +332,10 @@ body.splash-transition
   body > header
     bottom: nav_height
   .main
-    padding-top: nav_height
-    > hr
-      background: cabin_grey_light
-      border: none
-      height: 1px
-      margin: 0
-  .content
     padding: 0 30px
-
-  .main
+    padding-top: nav_height
     padding-bottom: footer_height
+
   footer
     absolute: bottom left; right: 0
     background: cabin_grey_light
