--- a/cabin/templates/base-full.html
+++ b/cabin/templates/base-full.html
@@ -22,24 +22,24 @@
     <h2>Crafting experiences for people &amp; projects we love.</h2>
   </header>
 
-  <nav>
-    <a href="{{ url_for('main.index') }}" class="logo">Cabin</a>
-    <div class="links">
-      <a href="{{ url_for('main.work') }}"><hr>Work</a>
-      <a href="{{ url_for('main.about') }}"><hr>About</a>
-      <a href="{{ url_for('main.lab') }}"><hr>Lab</a>
-      <div class="social">
-        <a href="https://twitter.com/madebycabin" target="_blank" class="twitter">Twitter</a>
-        <a href="https://www.facebook.com/madebycabin" target="_blank" class="facebook">Facebook</a>
-        <a href="http://madebycabin.tumblr.com/" target="_blank" class="tumblr">Tumblr</a>
-        <a href="http://www.flickr.com/photos/madebycabin" target="_blank" class="flickr">Flickr</a>
-        <a href="https://github.com/cabin" target="_blank" class="github">GitHub</a>
+  <div class="main">
+    <nav>
+      <a href="{{ url_for('main.index') }}" class="logo">Cabin</a>
+      <div class="links">
+        <a href="{{ url_for('main.work') }}"><hr>Work</a>
+        <a href="{{ url_for('main.about') }}"><hr>About</a>
+        <a href="{{ url_for('main.lab') }}"><hr>Lab</a>
+        <div class="social">
+          <a href="https://twitter.com/madebycabin" target="_blank" class="twitter">Twitter</a>
+          <a href="https://www.facebook.com/madebycabin" target="_blank" class="facebook">Facebook</a>
+          <a href="http://madebycabin.tumblr.com/" target="_blank" class="tumblr">Tumblr</a>
+          <a href="http://www.flickr.com/photos/madebycabin" target="_blank" class="flickr">Flickr</a>
+          <a href="https://github.com/cabin" target="_blank" class="github">GitHub</a>
+        </div>
       </div>
-    </div>
-    <a class="toggle"><span>+</span></a>
-  </nav>
+      <a class="toggle"><span>+</span></a>
+    </nav>
 
-  <div class="main"><hr>
     <section class="content"
       {%- if page %} data-page="{{ page }}"{% endif %}
       {%- if title %} data-title="{{ title }}"{% endif %}>
