--- a/cabin/templates/base-full.html
+++ b/cabin/templates/base-full.html
@@ -22,7 +22,7 @@
     <h2>Crafting experiences for people &amp; projects we love.</h2>
   </header>
 
-  <div class="main">
+  <div class="main"><hr>
     <nav>
       <a href="{{ url_for('main.index') }}" class="logo">Cabin</a>
       <div class="links">
