Add an HR for the top nav separator line

--- a/cabin/style/screen.styl
+++ b/cabin/style/screen.styl
@@ -118,6 +118,8 @@ body.splash
     min-height: @height
     padding-bottom: 0
     width: 100%
+    > hr
+      position: absolute
   nav
     position: absolute
   .content, footer
@@ -129,6 +131,8 @@ body.splash-transition
     position: absolute
   .main
     height: auto
+    > hr
+      position: absolute
   > header, .content
     display: block
 
