Ensure a minimum footer gutter

--- a/cabin/style/screen.styl
+++ b/cabin/style/screen.styl
@@ -373,7 +373,7 @@ body.splash-transition
     padding: 0 30px
 
   .main
-    padding-bottom: footer_height
+    padding-bottom: footer_height + 40px
 
   .main > hr
     absolute: top nav_height left
