--- a/cabin/templates/base-full.html
+++ b/cabin/templates/base-full.html
@@ -9,7 +9,7 @@
   <meta name="viewport" content="initial-scale=1.0">
   <meta name="apple-mobile-web-app-capable" content="yes">
 
-  {% assets 'screen.css', 'social.css' -%}
+  {% assets 'screen.css', 'icons.css' -%}
     <link href="{{ ASSET_URL }}" rel="stylesheet">
   {%- endassets %}
   {# XXX update to non-dev version #}
