--- a/cabin/style/screen.styl
+++ b/cabin/style/screen.styl
@@ -433,6 +433,7 @@ body.splash-transition
 
   .page-admin-project
     page-width(940px, 1100px)
+    input_height = 38px
 
     form *
       box-sizing: border-box
@@ -504,7 +505,7 @@ body.splash-transition
       width: 940px - 120 - 300 - 20
       margin-left: 20px
     [name="type"]
-      margin-bottom: 100px - 38 * 2
+      margin-bottom: 100px - input_height * 2
     [name="brief"]
       margin-bottom: 10px
       size: 750 150
@@ -535,7 +536,6 @@ body.splash-transition
           position: relative
           width: 100%
       &.drag figure
-        // XXX better styles here plz
         opacity: .5
 
     .services fieldset
@@ -550,6 +550,26 @@ body.splash-transition
         padding: 0
       li
         line-height: 22px;
+
+    .cohorts
+      input
+        float: left
+        margin-bottom: 10px
+        margin-right: 20px
+        width: 200px
+      input:nth-of-type(3n + 2)
+        width: 480px
+      button
+        float: left
+        margin-top: 10px
+      input:nth-of-type(3n + 1), input:nth-of-type(3n + 3), button
+        clear: left
+      .trash
+        background-color: cabin_grey_med
+        float: left
+        margin-top: 10px
+        &:hover
+          background-color: cabin_mustard
 
 
 // Neither CSS nor Stylus reliably supports nested media queries, so here we go
