--- a/cabin/style/screen.styl
+++ b/cabin/style/screen.styl
@@ -153,13 +153,14 @@ body.splash
     absolute: bottom left; top: auto
     height: 0
     min-height: @height
+    overflow: hidden
     padding-bottom: 0
     width: 100%
     > hr
       position: absolute
   nav
     position: absolute
-  .content, footer
+  footer
     display: none
 
 // Show everyone while transitioning.
@@ -170,7 +171,7 @@ body.splash-transition
     height: auto
     > hr
       position: absolute
-  > header, .content
+  > header
     display: block
 
 
