Add project creation form

--- a/cabin/style/icons.styl
+++ b/cabin/style/icons.styl
@@ -3,6 +3,8 @@
 icon(size)
   hide-text()
   background-size: size size
+  background-repeat: no-repeat
+  background-position: center center
   display: inline-block
   height: size
   width: size
